--- a/UNES/index.html
+++ b/UNES/index.html
@@ -22,7 +22,7 @@
 				<tr>
 					<td colspan="2">
 						<h2>Sobre a universidade</h2>
-	<p>Na <strong>UNES</strong> você encontra a melhor relação qualidade e preço</p>
+	<p>Na <strong>UNES</strong> você encontra a melhor relação, qualidade e preço.</p>
 
 <p>Com a nossa metodologia exclusiva A+ você nunca está sozinho. Temos professores focados na melhoria do seu bom desempenho e um núcleo de apoio à carreira para facilitar o seu sucesso no mercado de trabalho. Tudo isso por um preço que cabe no seu bolso.</p>
 <p>A UNES é uma Universidade que pensa no seu futuro. Por isso, investimos em inovação constantemente, tanto na oferta de cursos de graduação e pós-graduação quanto na infraestrutura que apoia sua formação.</p>
