--- a/UNES/quem-somos.html
+++ b/UNES/quem-somos.html
@@ -31,7 +31,7 @@
 	<ol>
 		<li>Material sempre atualizado</li>
 		<li>Tablets em sala de aula</li>
-		<li>Prfessores renomados</li>
+		<li>Professores renomados</li>
 		<li>Universidade bem avaliada</li>
 		<li>Ótima localização</li>
 	</ol>
