--- a/UNES/index.html
+++ b/UNES/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html>
 	<head>
-		<title>UNES - Página principal</title>
+		<title>UNES - Página Principal</title>
 		<meta charset="utf-8">
 	</head>
 	<body background="imagens/fundo.png">
@@ -21,7 +21,7 @@
 			</tr>
 				<tr>
 					<td colspan="2">
-						<h2>Sobre a universidade</h2>
+						<h2>Sobre a Universidade</h2>
 	<p>Na <strong>UNES</strong> você encontra a melhor relação, qualidade e preço.</p>
 
 <p>Com a nossa metodologia exclusiva A+ você nunca está sozinho. Temos professores focados na melhoria do seu bom desempenho e um núcleo de apoio à carreira para facilitar o seu sucesso no mercado de trabalho. Tudo isso por um preço que cabe no seu bolso.</p>
