--- a/TecBlog/index.html
+++ b/TecBlog/index.html
@@ -58,7 +58,7 @@
 			</div>
 
 			<div class="conteudo-lateral">
-				<h3>Categorias</h3>
+				<h3>Categorias</h3><br>
 				<span class="categorias"><a href="">Dicas</a></span><br><br>
 				<span class="categorias"><a href="">- Certificado Digital</a></span><br><br>
 				<span class="categorias"><a href="">- Ferramentas Online</a></span><br><br>
